# midi-2-gcode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  errors.txt
include/: app_settings.h  file_dialog.h  gcode_generator.h  gcode_visualizer.h  gl3w.h  midi_parser.h  midi_player.h
src/: app_settings.cpp  gcode_generator.cpp  gcode_visualizer.cpp  main.cpp  midi_parser.cpp  midi_player.cpp
